--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,9 +2,9 @@
     margin: 0 18px 0 0;
     font-weight: 400;
     font-size: 16px;
-    line-height: 18x;
+    line-height: 18px;
     color: #fff;
-    text-decoration: none;   
+    text-decoration: none;
     font-family: 'Inter-Regular'; 
 }
 
