--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/__list-span/intro__list-span.css);
 @import url(../blocks/intro/__list-item/intro__list-item.css);
 
 /*PHOTO-GRID*/
