--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,5 +4,5 @@
     line-height: 1.63;
     color: #fff;
     margin: 40px 0 0;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
