--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__conteiner.css);
 
@@ -7,6 +8,7 @@
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/__lang-link_active/header__lang-link_active.css);
 
 /*LEAD*/
 @import url(../blocks/lead/lead.css);
@@ -21,7 +23,6 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list/__list-span/intro__list-span.css);
-@import url(../blocks/intro/__list-item/intro__list-item.css);
 
 /*PHOTO-GRID*/
 @import url(../blocks/photo-grid/photo-grid.css);
@@ -35,6 +36,7 @@
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__paragraph/__paragraph_second/place__paragraph_second.css);
 
 /*COVER*/
 @import url(../blocks/cover/cover.css);
