--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,23 +1,30 @@
-.cover__title{
+.cover__title {
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #fff;
     margin: 0;
     max-width: 560px;
-    font-family: 'Inter-Black';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 @media screen and (max-width:1024px) {
     .cover__title {
-   margin-top: 50px;
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 680px) and (min-width: 320px) {
+    .cover__title {
+        font-size: 50px;
+        line-height: 54px;
     }
 }
 
 @media screen and (max-width:320px) {
     .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    padding: 0 4px 4px 0;
+        font-size: 32px;
+        line-height: 35px;
+        padding: 0 4px 4px 0;
     }
 }
