--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -5,12 +5,11 @@
     line-height: 16px;
     color: #fff;
     align-self: center;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
     .footer__copyright {
-        font-size: 14px;
         line-height: 14px;
         margin: 48px 0 24px;
     }
