--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,7 +5,7 @@
     line-height: 18px;
     color: #fff;
     text-decoration: none;
-    font-family: 'Inter-Regular'; 
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 .footer__link:hover {
@@ -14,8 +14,8 @@
 
 @media screen and (max-width: 320px) {
     .footer__link {
-    font-size: 24px;
-    line-height: 1;
-    margin-right: 0;
-   }
+        font-size: 24px;
+        line-height: 1;
+        margin-right: 0;
+    }
 }
