--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,9 +4,14 @@
     padding: 0;
 }
 
+@media screen and (max-width: 680px) and (min-width: 320px) {
+    .footer__links {
+        display: block;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer__links {
-        display: flex;
         flex-direction: column;
         gap: 32px;
         margin: 0;
