--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -17,6 +17,12 @@
     }
 }
 
+@media screen and (max-width: 680px) and (min-width: 320px) {
+    .footer {
+        display: block;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .footer {
         display: block;
