--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,16 +4,15 @@
     line-height: 28px;
     color: #fff;
     text-decoration: none;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-.header__lang-link:active {
-    text-decoration: underline solid white;
+.header__lang-link:hover {
+    opacity: .8;
 }
 
 @media screen and (max-width: 320px) {
     .header__lang-link {
-        font-weight: 400;
         font-size: 18px;
         line-height: 20px;
     }
