--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -4,12 +4,12 @@
     line-height: 58px;
     color: #fff;
     margin: 0;
-    font-family: 'Inter-Black';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 @media screen and (max-width: 320px) {
     .intro__title {
-    font-size: 32px;
-    line-height: 35px;
+        font-size: 32px;
+        line-height: 35px;
     }
 }
