--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,16 +6,17 @@
     color: #fff;
     text-transform: uppercase;
     margin: 8px auto 0;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
     .lead__caption {
-        margin: 8px 0 0 24px;
+        margin-left: 24px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__caption {
-        margin: 8px 0 0 16px;
+        margin-left: 16px;
     }
 }
