--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,16 +1,23 @@
 .lead__title {
-    font-family: 'Inter-Black';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 900;
-    font-size: 6em;
+    font-size: 96px;
     line-height: 100px;
-    color:#fff;
+    color: #fff;
     margin: 0 auto;
     text-align: center;
 }
 
+@media screen and (max-width: 680px) and (min-width:320px) {
+    .lead__title {
+        font-size: 50px;
+        line-height: 54px;
+    }
+}
+
 @media screen and (max-width: 320px) {
     .lead__title {
-    font-size: 40px;
-    line-height: 44px;
+        font-size: 40px;
+        line-height: 44px;
     }
 }
