--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -4,9 +4,16 @@
     font-size: 18px;
     line-height: 22px;
     color: #fff;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 .place__link:hover {
     opacity: .8;
+}
+
+@media screen and (max-width: 680px) and (min-width: 320px) {
+    .place__link {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
