--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,7 +5,7 @@
     color: #fff;
     margin: 0;
     align-self: end;
-    font-family: 'Inter-Black';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 @media screen and (max-width: 768px) {
@@ -16,10 +16,15 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 680px) and (min-width: 320px) {
     .place__title {
         font-size: 32px;
         line-height: 35px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__title {
         padding-left: 16px;
     }
 }
