--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,12 +5,12 @@
     line-height: 1;
     letter-spacing: 2px;
     color: #aaa;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     text-transform: uppercase;
 }
 
 @media screen and (max-width: 320px) {
     place__url-heading {
-       margin: 0 0 12px 0;
+        margin: 0 0 12px 0;
     }
 }
