--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,14 +8,14 @@
     text-align: center;
 }
 
-@media all and (max-width: 680px) and (min-width:320px) {
+@media screen and (max-width: 680px) and (min-width:320px) {
     .lead__title {
         font-size: 50px;
         line-height: 54px;
     }
 }
 
-@media all and (max-width: 320px) {
+@media screen and (max-width: 320px) {
     .lead__title {
         font-size: 40px;
         line-height: 44px;
