Попытка сдать проект №2_исправлены замечания ревьюера

--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,10 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
+.footer__link:last-child {
+    margin: 0;
+}
+
 .footer__link:hover {
     opacity: .8;
 }
