--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,11 +1,10 @@
 .header__lang-links {
-    margin: 0;
+    margin: 0 48px 0 0;
     list-style-type: none;
-    margin-right: 48px;
     display: flex;
     align-items: flex-end;
     gap: 18px;
-    padding-bottom: 4px;
+    padding: 0 0 4px 0;
 }
 
 @media screen and (max-width: 768px) {
