--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,7 +5,7 @@
     color: #fff;
     text-decoration: none;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
-    
+    transition: opacity 0.2s ease;
 }
 
 .header__lang-link:hover {
