--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -3,6 +3,7 @@
     background-image: url(../../../images/cover-trains.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     text-align: center;
     box-sizing: border-box;
     display: flex;
@@ -24,6 +25,7 @@
     background-color: #2A2C2F;
     opacity: .3;
     z-index: -1;
+    transition: opacity 0.2s ease;
 }
 
 .cover__link:hover::before {
