--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,20 +8,21 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width:1024px) {
-    .cover__title {
-        margin-top: 50px;
-    }
-}
-
-@media screen and (max-width: 680px) and (min-width: 320px) {
+@media screen and (max-width: 680px) and (min-width: 501px) {
     .cover__title {
         font-size: 50px;
         line-height: 54px;
     }
 }
 
-@media screen and (max-width:320px) {
+@media screen and (max-width: 500px) and (min-width: 321px) {
+    .cover__title {
+        font-size: 46px;
+        line-height: 48px;
+    }
+}
+
+@media screen and (max-width: 320px) {
     .cover__title {
         font-size: 32px;
         line-height: 35px;
