--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,6 +6,7 @@
     color: #fff;
     text-decoration: none;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
+    transition: opacity 0.2s ease;
 }
 
 .footer__link:last-child {
