--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,10 +8,17 @@
     text-align: center;
 }
 
-@media screen and (max-width: 680px) and (min-width:320px) {
+@media screen and (max-width: 680px) and (min-width: 501px) {
     .lead__title {
         font-size: 50px;
         line-height: 54px;
+    }
+}
+
+@media screen and (max-width: 500px) and (min-width: 321px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
     }
 }
 
