--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -5,15 +5,23 @@
     line-height: 22px;
     color: #fff;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
+    transition: opacity 0.2s ease;
 }
 
 .place__link:hover {
     opacity: .8;
 }
 
-@media screen and (max-width: 680px) and (min-width: 320px) {
+@media screen and (max-width: 450px) and (min-width: 321px) {
     .place__link {
         font-size: 14px;
         line-height: 16px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__link {
+        font-size: 18px;
+        line-height: 22px;
     }
 }
