--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,20 +5,26 @@
     line-height: 29px;
     color: #fff;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
-    white-space: pre-line;
+    margin-bottom: 25px;
+}
+
+.place__paragraph:last-of-type {
+    margin-bottom: 0;
+}
+
+.place__paragraph:only-of-type {
+    margin-bottom: 0;
 }
 
 @media screen and (max-width: 768px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 25.99px;
-        letter-spacing: -0.1px;
-    }
+        line-height: 26px;
+     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 450px) {
     .place__paragraph {
         padding: 0 16px 0;
-        line-height: 25.99px;
     }
 }
