1. Верстка по Pirfect-Pixel, 2. Избавилась от скролла

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -6,3 +6,10 @@
     margin: 40px 0 0;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
+
+@media screen and (max-width: 320px) {
+    .intro__text {
+        width: 100%;
+        content: 'По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но&nbsp;только&nbsp;36%&nbsp;планируют&nbsp;провести отпуск&nbsp;в&nbsp;родной&nbsp;стране.&nbsp;Мол,&nbsp;чего мы&nbsp;тут,&nbsp;дома,&nbsp;не&nbsp;видели?&nbsp;На&nbsp;самом деле, Россия — это целая вселенная&nbsp;с&nbsp;ласковым&nbsp;море&nbsp;юга, густыми&nbsp;лесами&nbsp;Саян&nbsp;и&nbsp;суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без&nbsp;миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,&nbsp;которая&nbsp;взяла&nbsp;в&nbsp;охапку&nbsp;троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч километров по&nbsp;родной стране. Мы выбрали и&nbsp;описали&nbsp;некоторые&nbsp;интересные места,&nbsp;достойные&nbsp;вашего&nbsp;отпуска';
+    }
+}
