--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,17 +1,26 @@
 .lead__image {
     display: block;
     margin: 64px auto 0;
-    width: 100%;
+    max-width: 77vw;
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
         margin: 56px auto 0;
+        max-width: 91vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__image {
+        margin: 67px auto 0;
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__image {
         margin: 40px 0 0;
+        min-height: 200px;
     }
 }
