--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -3,3 +3,11 @@
     object-fit: cover;
     object-position: left top;
 }
+
+
+
+@media screen and (max-width: 320px) {
+    .photo-grid__item {
+        min-height: 216px;
+    }
+}
