--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,22 +1,36 @@
 .photo-grid {
-    padding: 90px 48px 0;
+    padding: 92px 48px 0;
     display: grid;
     margin: 0 auto;
-    gap: 16px;
-    grid-template-columns: repeat(4, 1fr);
+    gap: 16px 16px;
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
     .photo-grid {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 }
 
 @media screen and (max-width: 768px) {
     .photo-grid {
         padding: 88px 24px 0;
-        grid-template-columns: repeat(2, 1fr);
+        max-width: calc(100% - 48px);
+        grid-template-columns: repeat(2, minmax(150px, 352px));
+        grid-auto-rows: minmax(100px, 264px);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .photo-grid {
+        grid-auto-rows: auto;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .photo-grid {
+        grid-template-columns: 1fr;
     }
 }
 
@@ -24,6 +38,7 @@
     .photo-grid {
         padding: 64px 16px 0;
         grid-template-columns: 1fr;
+        grid-template-rows: repeat(auto-fit, minmax(215px, 1fr));
         gap: 12px;
     }
 }
