--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,25 @@
 .place__image {
-    max-width: 100%;
+    max-width: 36vw;
     object-fit: cover;
     object-position: top;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px) {
+    .place__image {
+        max-width: 43vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        max-width: 44vw;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .place__image {
+        max-width: 100%;
+        min-height: 320px;
+    }
 }
