--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,6 @@
 .place {
     display: grid;
-    grid-template-columns: 47% 47%;
-    grid-template-rows: auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 48px 37px;
     padding: 80px 148px 0;
     margin: 0 auto;
@@ -14,7 +13,7 @@
 @media screen and (max-width: 1024px) {
     .place {
         padding: 80px 48px 0;
-        gap: 52px 32px;
+        gap: 50px 35px;
     }
 }
 
@@ -28,16 +27,25 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .place {
+        grid-template-columns: repeat(auto-fit, fit-content(352px));
+        gap: 48px 28px;
+    }
+}
+
 @media screen and (max-width: 500px) {
     .place {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
         gap: 32px;
-        padding: 50px 0 0;
+        padding: 50px 16px 0;
     }
 
     .place:first-child {
         padding-top: 64px;
     }
 }
+
+@media screen and (max-width: 350px) {
+    .place {
+        padding: 50px 0 0;
+    }
