--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,13 +1,21 @@
 .photo-grid__item {
     width: 100%;
-    object-fit: cover;
-    object-position: left top;
 }
 
+@media screen and (max-width: 768px) {
+    .photo-grid__item {
+        max-width: 352px;
+    }
+}
 
+@media screen and (max-width: 450px) {
+    .photo-grid__item {
+        min-width: 250px;
+    }
+}
 
 @media screen and (max-width: 320px) {
     .photo-grid__item {
-        min-height: 216px;
+        min-width: 288px;
     }
 }
