--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,22 +1,22 @@
 .cover {
     margin: 0 auto;
-    padding: 90px 48px 0;
+    padding: 92px 48px 0;
 }
 
 @media screen and (max-width: 1024px) {
     .cover {
-        padding: 80px 0 0;
+        padding: 92px 0 0;
     }
 }
 
 @media screen and (max-width: 768px) {
     .cover {
-        padding: 90px 0 0;
+        padding-top: 90px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
-        padding: 66px 0 0;
+        padding-top: 66px 0 0;
     }
 }
