--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,7 +7,7 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width: 500px) and (min-width: 321px) {
+@media screen and (max-width: 500px) {
     .intro__title {
         font-size: 46px;
         line-height: 48px;
