--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 768px) {
     .lead__image {
-        margin: 67px auto 0;
+        margin-top: 67px;
         max-width: 100%;
     }
 }
