--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -9,7 +9,7 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
-@media screen and (max-width: 680px) and (min-width: 321px) {
+@media screen and (max-width: 680px) {
     .lead__subtitle {
         font-size: 16px;
         line-height: 1.63;
@@ -18,8 +18,7 @@
 
 @media screen and (max-width: 320px) {
     .lead__subtitle {
-        font-size: 16px;
         line-height: 20px;
-        margin: 16px auto 0;
+        margin-top: 16px;
     }
 }
