--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,13 +3,13 @@
     display: grid;
     margin: 0 auto;
     gap: 16px 16px;
-    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(235px, 1fr));
     justify-content: center;
 }
 
 @media screen and (max-width: 1024px) {
     .photo-grid {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
 }
 
@@ -17,8 +17,8 @@
     .photo-grid {
         padding: 88px 24px 0;
         max-width: calc(100% - 48px);
-        grid-template-columns: repeat(2, minmax(150px, 352px));
-        grid-auto-rows: minmax(100px, 264px);
+        grid-template-columns: repeat(auto-fill, minmax(100px, 343px));
+        grid-auto-rows: minmax(50px, 264px);
     }
 }
 
@@ -28,17 +28,11 @@
     }
 }
 
-@media screen and (max-width: 450px) {
-    .photo-grid {
-        grid-template-columns: 1fr;
-    }
-}
-
 @media screen and (max-width: 320px) {
     .photo-grid {
         padding: 64px 16px 0;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(auto-fit, minmax(215px, 1fr));
+        grid-template-rows: repeat(auto-fill, minmax(215px, 1fr));
         gap: 12px;
     }
 }
