--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,25 @@
 .place__image {
-    max-width: 36vw;
+    width: 100%;
     object-fit: cover;
     object-position: top;
     box-sizing: border-box;
+    min-height: 460px;
 }
 
 @media screen and (max-width: 1024px) {
     .place__image {
-        max-width: 43vw;
+        min-height: 440px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .place__image {
-        max-width: 44vw;
+        min-height: 340px;
     }
 }
 
 @media screen and (max-width: 350px) {
     .place__image {
-        max-width: 100%;
         min-height: 320px;
     }
 }
