--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -12,7 +12,7 @@
     opacity: .8;
 }
 
-@media screen and (max-width: 500px) and (min-width: 321px) {
+@media screen and (max-width: 500px) {
     .place__link {
         font-size: 14px;
         line-height: 16px;
