--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,6 +11,6 @@
 @media screen and (max-width: 680px) {
     .footer__copyright {
         line-height: 14px;
-        margin: 48px 0 24px;
+        margin: 48px 0 0;
     }
 }
