--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,12 +1,17 @@
 .lead__image {
     display: block;
-    margin: 64px auto 0;
-    max-width: 77vw;
+    margin: 56px auto 0;
+    max-width: 78vw;
+}
+
+@media screen and (min-width: 1281px) {
+    .lead__image {
+        max-width: 984px;
+    }
 }
 
 @media screen and (max-width: 1024px) {
     .lead__image {
-        margin: 56px auto 0;
         max-width: 91vw;
     }
 }
