--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,6 +8,12 @@
     font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
+@media screen and (max-width: 1024px) {
+    .footer__copyright {
+        margin: 0;
+    }
+}
+
 @media screen and (max-width: 680px) {
     .footer__copyright {
         line-height: 14px;
