--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,13 @@
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    padding: 92px 48px 24px;
+    padding: 92px 0 24px;
+}
+
+@media screen and (max-width: 1024px) {
+    .footer {
+        padding: 92px 48px 24px;
+    }
 }
 
 @media screen and (max-width: 768px) {
