--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-    padding: 92px 48px 0;
+    padding-top: 92px;
     display: grid;
     margin: 0 auto;
     gap: 16px 16px;
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 1024px) {
     .photo-grid {
+        padding: 92px 48px 0;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     }
 }
