--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,10 +1,16 @@
 .header__lang-links {
-    margin: 0 48px 0 0;
+    margin: 0;
     list-style-type: none;
     display: flex;
     align-items: flex-end;
     gap: 18px;
     padding: 0 0 4px 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .header__lang-links {
+        margin-right: 48px;
+    }
 }
 
 @media screen and (max-width: 768px) {
