--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,13 @@
 .header__logo {
     max-width: 176px;
     min-height: 52px;
-    padding: 28px 48px 0;
+    padding: 28px 0 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .header__logo {
+        padding: 28px 48px 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
