--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,9 @@
 .place {
     display: grid;
-    grid-template-columns: minmax(300px, 1fr) minmax(320px, 1fr);
+    grid-template-columns: minmax(300px, 1fr) minmax(320px, 484px);
     grid-template-rows: auto;
     gap: 48px 40px;
-    padding: 80px 112px 0;
+    padding: 80px 100px 0;
     margin: 0 auto;
 }
 
@@ -15,7 +15,7 @@
     .place {
         padding: 80px 48px 0;
         gap: 48px 32px;
-        grid-template-columns: minmax(280px, 1fr) minmax(300px, 1fr);
+        grid-template-columns: minmax(280px, 1fr) minmax(300px, 456px);
     }
 }
 
@@ -32,7 +32,7 @@
 @media screen and (max-width: 768px) {
     .place {
         gap: 48px 28px;
-        grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr);
+        grid-template-columns: minmax(200px, 1fr) minmax(200px, 352px);
     }
 }
 
